# openvx-mark

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: FindOpenVX.cmake
docs/: features-to-add.md  framework-mark-plan.md
include/: bench_runtime.h  benchmark_catalog.h  benchmark_config.h  benchmark_context.h  benchmark_report.h  benchmark_runner.h  benchmark_stats.h  benchmark_timer.h  kernel_registry.h  openvx_perf_query.h  openvx_version.h  resource_tracker.h  system_info.h  test_data_generator.h  verify_utils.h
opencv-mark/: CMakeLists.txt
opencv-mark/include/: opencv_context.h  opencv_runner.h  opencv_test_data.h  opencv_verify.h
opencv-mark/src/: cv_output_dumper.cpp  main.cpp  opencv_context.cpp  opencv_runner.cpp  opencv_test_data.cpp  opencv_verify.cpp
opencv-mark/src/benchmarks/: cv_color.cpp  cv_feature.cpp  cv_filters.cpp  cv_geometric.cpp  cv_misc.cpp  cv_multiscale.cpp  cv_pixelwise.cpp  cv_statistical.cpp
scripts/: ci_pairwise_summary.py  compare_reports.py  cross_verify_outputs.py
src/: bench_runtime.cpp  benchmark_context.cpp  benchmark_report.cpp  benchmark_runner.cpp  benchmark_stats.cpp  benchmark_timer.cpp  kernel_registry.cpp  main.cpp  openvx_output_dumper.cpp  openvx_perf_query.cpp  system_info.cpp  test_data_generator.cpp  verify_utils.cpp
src/benchmarks/: framework_benchmarks.cpp  immediate_benchmarks.cpp  node_color.cpp  node_extraction.cpp  node_feature.cpp  node_filters.cpp  node_geometric.cpp  node_misc.cpp  node_multiscale.cpp  node_pixelwise.cpp  node_statistical.cpp  node_tensor.cpp  pipeline_feature.cpp  pipeline_vision.cpp
